crates/query-engine/translation/tests/snapshots/tests__native_queries__select_artist.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH [1_NATIVE_QUERY_artist] AS (
  SELECT
    *
  FROM
    public."Artist"
)
SELECT
  ISNULL([3_rows].[rows], '[]') AS [rows]
FROM
  (
    SELECT
      [0_artist].[Name] AS [Name]
    FROM
      [1_NATIVE_QUERY_artist] AS [0_artist] FOR JSON PATH,
      INCLUDE_NULL_VALUES
  ) AS [3_rows]([rows]) FOR JSON PATH,
  INCLUDE_NULL_VALUES,
  WITHOUT_ARRAY_WRAPPER

[]
